--- a/Baishop-manager/src-web/conf/dev/jdbc.conf
+++ b/Baishop-manager/src-web/conf/dev/jdbc.conf
@@ -8,18 +8,18 @@
 #系统库baishop-ass
 jdbc.baishop-ass.url=jdbc:mysql://localhost:3306/baishop-ass?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.baishop-ass.user=root
-jdbc.baishop-ass.password=mfkjesk
+jdbc.baishop-ass.password=123456
 jdbc.baishop-ass.maxPoolSize=50
 
 #商城库baishop-shop
 jdbc.baishop-shop.url=jdbc:mysql://localhost:3306/baishop-shop?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.baishop-shop.user=root
-jdbc.baishop-shop.password=mfkjesk
+jdbc.baishop-shop.password=123456
 jdbc.baishop-shop.maxPoolSize=50
 
 
 #日志库baishop-syslog
 jdbc.baishop-syslog.url=jdbc:mysql://localhost:3306/baishop-syslog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 jdbc.baishop-syslog.user=root
-jdbc.baishop-syslog.password=mfkjesk
+jdbc.baishop-syslog.password=123456
 jdbc.baishop-syslog.maxPoolSize=50
